Added styling to .far and .fas to support more icon types.

--- a/main-menu.scss
+++ b/main-menu.scss
@@ -19,7 +19,7 @@
 			background: rgb(55, 74, 94);
 		}
 		
-		.fa {
+		.fa, .fas, .far {
 			width: 1em;
 			margin: 0 auto;
 			margin-right: 10px;
