--- a/global-style.50.scss
+++ b/global-style.50.scss
@@ -2,7 +2,7 @@ html, body, #react-view, #react-root, #content-root, #content-page {
     height: 100%;
     width: 100%;
     margin: 0;
-    font-family: $font_family;
+    font-family: $installed_font;
 }
 
 .non-selectable {
