--- a/Tab.scss
+++ b/Tab.scss
@@ -11,6 +11,8 @@
         align-items: center;
         height: 100%;
         justify-content: space-between;
+        line-height: normal;
+        padding-bottom: .25rem;
 
         .fas, .far, .fal, .fad {
             font-size: 4rem;
