--- a/global-style.50.scss
+++ b/global-style.50.scss
@@ -161,3 +161,10 @@ body, html, #react-loading {
 .hidden {
     display: none !important;
 }
+
+/* Blocks orange focus outlines on older phones */
+* {
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important; 
+    -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important; 
+    outline: none !important;
+} 
