Improved support for inline elements. Text will shortly no longer need to be explicitly added.

--- a/canvas-editor.scss
+++ b/canvas-editor.scss
@@ -2,7 +2,9 @@
 	text-align: left;
 	
 	.canvas-editor-text{
-		min-height: 50px;
+		display: inline-block;
+		min-width: 50px;
+		min-height: 1em;
 		height: auto;
 	}
 	
