--- a/image.scss
+++ b/image.scss
@@ -1,4 +1,5 @@
 .image{
+	position: relative;
 	display: inline-block;
 	
 	&.image-wide{
@@ -8,5 +9,11 @@
 		img{
 			width: 100%;
 		}
+	}
+	
+	.edit-button{
+		position: absolute;
+		top: 5px;
+		left: 5px;
 	}
 }
