update Pathways font (now includes styled 0-9 characters)

--- a/pathways.scss
+++ b/pathways.scss
@@ -1,9 +1,9 @@
 @font-face {
     font-family: 'Pathways';
-    src: url('./Pathways-Regular.woff2') format('woff2'),
-        url('./Pathways-Regular.woff') format('woff'), 
-        url('./PathwaysScript.otf') format('otf'), 
-        url('./Pathways-Regular.svg') format('svg');
+    src: url('./PathwaysScript-Regular.woff2') format('woff2'),
+        url('./PathwaysScript-Regular.woff') format('woff'), 
+        url('./PathwaysScript-Regular.otf') format('otf'), 
+        url('./PathwaysScript-Regular.svg#PathwaysScript-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
