--- a/global-style.50.scss
+++ b/global-style.50.scss
@@ -135,5 +135,5 @@ html, body, #react-view, #react-root, #content-root, #content-page, #react-loadi
 * {
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important; 
     -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important; 
-    outline: none !important;
+    outline: none;
 } 
