--- a/Photosphere.scss
+++ b/Photosphere.scss
@@ -1,5 +1,6 @@
 .photosphere{
 	position: relative;
+	opacity: 0;
 	
 	canvas{
 		width: 100%;
@@ -20,5 +21,11 @@
 		border: 0;
 		margin: 0;
 		display: block;
+	}
+	
+	transition: opacity 1s;
+	
+	&.loaded{
+		opacity: 1;
 	}
 }
