--- a/global-style.50.scss
+++ b/global-style.50.scss
@@ -1,8 +1,8 @@
-html, body, #react-view, #react-root, #content-root, #content-page, #react-loading{
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    font-family: $installed_font;
+html, body, #react-view, #react-root, #content-root, #content-page, #react-loading {
+	height: 100%;
+	width: 100%;
+	margin: 0;
+	font-family: $theme_font_family;
 	touch-action: manipulation;
 }
 
@@ -23,15 +23,15 @@ html, body, #react-view, #react-root, #content-root, #content-page, #react-loadi
 }
 
 .pad20 {
-    padding: 0em + 20/16;
+    padding: 0em + 20/$base_font_size;
 }
 
 .space20 {
-    margin-top: 0em + 20/16;
+	margin-top: 0em + 20/$base_font_size;
 }
 
 .margin-y-20 {
-    margin: 0em + 20/16 0;
+	margin: 0em + 20/$base_font_size 0;
 }
 
 .float-right {
