Input component updated: label-important check / ability to override select "no selection" text / ability to render icon after input field added

--- a/input.scss
+++ b/input.scss
@@ -1,3 +1,6 @@
+// NB: refer to UI/Source/ThirdParty/GlobalStyle/global-forms.45.scss for shared form styling
+// (UI/Source/GeneralStyle/Forms.50.scss for project-specific styling)
+
 .validation-error{
 	color: red;
 	font-size: smaller;
