--- a/global-forms.45.scss
+++ b/global-forms.45.scss
@@ -3,14 +3,59 @@
     NB: named global-forms.45.scss to allow for project-specific overrides to these styles (see UI/Source/GeneralStyle/forms.50.scss)
 */
 
+// standard chevron icon (used on restyled select dropdown controls)
+$dropdown_svg: 'data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="101" height="34"><path d="M28.989 34c-1.1 0-2.1-.4-2.9-1.2l-25-26C.389 6-.011 5-.011 4c0-1.1.4-2.1 1.2-2.9 1.6-1.5 4.1-1.5 5.7.1l22.1 23 22.1-23c1.5-1.6 4.1-1.6 5.7-.1 1.6 1.5 1.6 4.1.1 5.7l-25 26c-.8.8-1.8 1.2-2.9 1.2z" fill="%23000000"/></svg>';
+
+@mixin input_field_placeholder() {
+    color: $ss_form_field_placeholder !important;
+    font-weight: $ss_form_field_placeholder_weight;
+    font-style: $ss_form_field_placeholder_style;
+}
+
 @mixin input_field_styling() {
     @include font_size($ss_form_field_font_size);
-    @include padding($ss_form_field_padding_x, $ss_form_field_padding_y);
+    @include padding($ss_form_field_padding_y, $ss_form_field_padding_x);
     @include border_radius($ss_form_field_border_radius);
     background-color: $ss_form_field_bg;
     color: $ss_form_field_fg;
     border: $ss_form_field_border;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-family: $ss_form_field_font_family;
+    font-weight: $ss_form_field_font_weight;
+    height: auto;
+    //transition: all 0.2s ease-in-out;
+    &:hover {
+    }
+
+    &:focus {
+    }
+
+    &:placeholder-shown {
+        // for styling whenever placeholder is visible
+    }
+
+    &::placeholder {
+        @include input_field_placeholder();
+    }
+
+    &::-webkit-input-placeholder {
+        @include input_field_placeholder();
+    }
+
+    &::-moz-placeholder {
+        @include input_field_placeholder();
+    }
+
+    &:-ms-input-placeholder {
+        @include input_field_placeholder();
+    }
+
+    &::-ms-input-placeholder {
+        @include input_field_placeholder();
+    }
+
+    &:-moz-placeholder {
+        @include input_field_placeholder();
+    }
 }
 
 fieldset {
@@ -22,18 +67,41 @@ fieldset {
 }
 
 label {
+    @include font_size($ss_form_field_label_font_size);
+    color: $ss_form_field_label;
+    font-weight: $ss_form_field_label_font_weight;
 
+    &:not(.label-important):not(.custom-control-label) {
+        @if $ss_form_field_label_hidden {
+            display: none;
+        }
+    }
 }
 
-input {
+.form-group {
+    // see ThirdParty/Input - used when optionally providing an icon class
+    .input-wrapper {
+        display: flex;
+        align-items: center;
+
+        input + i {
+            @include font_size($ss_form_field_icon_size);
+            @include margin(0, 0, 0, 16);
+            color: $ss_form_field_icon;
+        }
+    }
+}
+
+// specify .form-control to ensure we override Bootstrap classes where necessary
+input.form-control {
     // form buttons
     // NB: see global-buttons.35.scss
     /*
-    &[type='button'],
-    &[type='reset'],
-    &[type='submit'] {
-    }
-    */
+&[type='button'],
+&[type='reset'],
+&[type='submit'] {
+}
+*/
     // checkboxes
     &[type='checkbox'] {
     }
@@ -68,10 +136,28 @@ input {
     }
 }
 
-textarea {
+textarea.form-control {
     @include input_field_styling;
 }
 
-select {
+select.form-control {
+    @include input_field_styling;
+    //line-height: 1.3;
+    //display: inline-block;
+    box-sizing: border-box;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    background-image: url(replace-svg-fill($dropdown_svg, '%23000000', $ss_form_field_icon));
+    background-repeat: no-repeat;
+    background-position: $ss_form_field_background_position;
+    background-size: $ss_form_field_background_size;
 
+    &::-ms-expand {
+        display: none;
+    }
+
+    option {
+        font-weight: normal !important;
+    }
 }
