--- a/global-variables.5.scss
+++ b/global-variables.5.scss
@@ -51,13 +51,26 @@ $theme_secondary_btn_active_border: 2px solid darken($unbranded_dark, 20%) !defa
 
 // form styling
 $ss_form_field_bg: #fff;
-$ss_form_field_fg: #444;
+$ss_form_field_fg: #444444;
 $ss_form_field_border: 1px solid #e5e5e5;
 $ss_form_field_font_family: -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, "Helvetica Neue", Helvetica, sans-serif;
-$ss_form_field_padding_x: 14;
-$ss_form_field_padding_y: 10;
+$ss_form_field_font_weight: normal;
+$ss_form_field_padding_x: 16;
+$ss_form_field_padding_y: 9;
 $ss_form_field_font_size: 14;
 $ss_form_field_border_radius: $ss_form_field_font_size / 2;
+$ss_form_field_icon: $ss_form_field_fg; // used for select dropdown icon
+$ss_form_field_background_position: 98% 50%;
+$ss_form_field_background_size: 1.5em;
+$ss_form_field_label: #444;
+$ss_form_field_label_font_size: 16;
+$ss_form_field_label_font_weight: bold;
+$ss_form_field_label_hidden: false;
+$ss_form_field_icon: $ss_form_field_label;
+$ss_form_field_icon_size: 32;
+$ss_form_field_placeholder: #999;
+$ss_form_field_placeholder_style: italic;
+$ss_form_field_placeholder_weight: normal;
 
 // links
 $theme_link_fg: $unbranded_dark !default;
