--- a/global-forms.45.scss
+++ b/global-forms.45.scss
@@ -81,14 +81,16 @@ fieldset {
 
 }
 
-label {
-    @include font_size($ss_form_field_label_font_size);
-    color: $ss_form_field_label;
-    font-weight: $ss_form_field_label_font_weight;
+html:not(.admin) {
+    label {
+        @include font_size($ss_form_field_label_font_size);
+        color: $ss_form_field_label;
+        font-weight: $ss_form_field_label_font_weight;
 
-    &:not(.label-important):not(.custom-control-label) {
-        @if $ss_form_field_label_hidden {
-            display: none;
+        &:not(.label-important):not(.custom-control-label) {
+            @if $ss_form_field_label_hidden {
+                display: none;
+            }
         }
     }
 }
