--- a/global-buttons.35.scss
+++ b/global-buttons.35.scss
@@ -45,6 +45,11 @@
         color: $theme_primary_btn_active_fg;
         border: $theme_primary_btn_active_border;
     }
+
+    &:focus {
+        outline: 0;
+        box-shadow: 0 0 0 0.2rem rgba($theme_primary_btn_bg, .5);
+    }
 }
 
 @mixin secondary_button_styling() {
@@ -63,6 +68,11 @@
         color: $theme_secondary_btn_active_fg;
         border: $theme_secondary_btn_active_border;
     }
+
+    &:focus {
+        outline: 0;
+        box-shadow: 0 0 0 0.2rem rgba($theme_secondary_btn_bg, .5);
+    }
 }
 
 .ss-button {
@@ -79,6 +89,77 @@
 
     &.ss-button__secondary {
         @include secondary_button_styling();
+    }
+}
+
+// Bootstrap overrides
+.btn {
+    @include base_button_styling();
+
+    &.btn-primary {
+        @include primary_button_styling();
+    }
+
+    &.btn-secondary {
+        @include secondary_button_styling();
+    }
+
+    &.btn-success {
+        background-color: $theme_success_bg;
+        color: $theme_success_fg;
+        border: 0;
+
+        &:hover {
+            background-color: darken($theme_success_bg, 5%);
+            color: darken($theme_success_fg, 5%);
+            border: 0;
+        }
+
+        &:active {
+            background-color: darken($theme_success_bg, 10%);
+            color: darken($theme_success_fg, 10%);
+            border: 0;
+        }
+
+        &:focus {
+            outline: 0;
+            box-shadow: 0 0 0 0.2rem rgba($theme_success_bg, .5);
+        }
+    }
+
+    &.btn-danger {
+        background-color: $theme_danger_bg;
+        color: $theme_danger_fg;
+        border: 0;
+
+        &:hover {
+            background-color: darken($theme_danger_bg, 5%);
+            color: darken($theme_danger_fg, 5%);
+            border: 0;
+        }
+
+        &:active {
+            background-color: darken($theme_danger_bg, 10%);
+            color: darken($theme_danger_fg, 10%);
+            border: 0;
+        }
+
+        &:focus {
+            outline: 0;
+            box-shadow: 0 0 0 0.2rem rgba($theme_danger_bg, .5);
+        }
+    }
+
+    &.btn-warning {
+    }
+
+    &.btn-info {
+    }
+
+    &.btn-light {
+    }
+
+    &.btn-dark {
     }
 }
 
