--- a/global-variables.5.scss
+++ b/global-variables.5.scss
@@ -14,32 +14,49 @@ $unbranded_light: #fff;
 $badge_bg: $unbranded_dark !default;
 $badge_fg: $unbranded_light !default;
 $badge_border_radius: 0 !default;
+$badge_padding_x: 8 !default;
+$badge_padding_y: 2 !default;
 
-// fonts
+// typography
 $base_font_size: 16 !default; // in px
 $theme_font_family: "Open Sans", Arial, sans-serif !default;
+
 $title_font_family: $theme_font_family !default;
 $title_font_weight: 700 !default;
+$title_line_height: 1.2 !default;
+$theme_h1_font_size: 2.5rem !default;
+$theme_h2_font_size: 2rem !default;
+$theme_h3_font_size: 1.75rem !default;
+$theme_h4_font_size: 1.5rem !default;
+$theme_h5_font_size: 1.25rem !default;
+$theme_h6_font_size: 1rem !default;
+$theme_header: $unbranded_dark;
+
+$regular_font_size: 1rem;
 $regular_font_family: $theme_font_family !default;
 $regular_font_weight: 400 !default;
+$regular_line_height: 1.5 !default;
+
 $bold_font_family: $theme_font_family !default;
 $bold_font_weight: 700 !default;
+
 $light_font_family: $theme_font_family !default;
 $light_font_weight: 400 !default;
+
 $installed_font: $theme_font_family; // for backwards compatibility (original variable name)
 
 // colours
-$theme_success_bg: #28a745;
-$theme_success_fg: #fff;
+$theme_success_bg: #28a745 !default;
+$theme_success_fg: #fff !default;
 
-$theme_danger_bg: #dc3545;
-$theme_danger_fg: #fff;
+$theme_danger_bg: #dc3545 !default;
+$theme_danger_fg: #fff !default;
 
-$theme_warning_bg: #ffc107;
-$theme_warning_fg: #212529;
+$theme_warning_bg: #ffc107 !default;
+$theme_warning_fg: #212529 !default;
 
-$theme_info_bg: #17a2b8;
-$theme_info_fg: #fff;
+$theme_info_bg: #17a2b8 !default;
+$theme_info_fg: #fff !default;
 
 // buttons
 $theme_primary_btn_bg: $unbranded_dark !default;
@@ -62,28 +79,42 @@ $theme_secondary_btn_active_bg: darken($theme_secondary_btn_bg, 20%) !default;
 $theme_secondary_btn_active_fg: darken($theme_secondary_btn_fg, 20%) !default;
 $theme_secondary_btn_active_border: 2px solid darken($unbranded_dark, 20%) !default;
 
+// modals
+// overrides for bootstrap modal defaults
+$theme_modal_backdrop: #fff !default;
+$theme_modal_backdrop_opacity: .85 !default;
+$theme_modal_bg: #fff !default;
+$theme_modal_fg: #444 !default;
+$theme_modal_border: 1px solid rgba(0, 0, 0, 0.2) !default;
+$theme_modal_border_radius: .3rem !default;
+$theme_modal_box_shadow: none !default;
+$theme_modal_header_height: auto !default;
+$theme_modal_close_bg: transparent !default;
+$theme_modal_close_fg: #888 !default;
+$theme_modal_close_font_size: 16 !default;
+
 // form styling
-$ss_form_field_bg: #fff;
-$ss_form_field_fg: #444444;
-$ss_form_field_border: 1px solid #e5e5e5;
-$ss_form_field_font_family: -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, "Helvetica Neue", Helvetica, sans-serif;
-$ss_form_field_font_weight: normal;
-$ss_form_field_padding_x: 16;
-$ss_form_field_padding_y: 9;
-$ss_form_field_font_size: 14;
-$ss_form_field_border_radius: $ss_form_field_font_size / 2;
-$ss_form_field_icon: $ss_form_field_fg; // used for select dropdown icon
-$ss_form_field_background_position: 98% 50%;
-$ss_form_field_background_size: 1.5em;
-$ss_form_field_label: #444;
-$ss_form_field_label_font_size: 16;
-$ss_form_field_label_font_weight: bold;
-$ss_form_field_label_hidden: false;
-$ss_form_field_icon: $ss_form_field_label;
-$ss_form_field_icon_size: 32;
-$ss_form_field_placeholder: #999;
-$ss_form_field_placeholder_style: italic;
-$ss_form_field_placeholder_weight: normal;
+$ss_form_field_bg: #fff !default;
+$ss_form_field_fg: #444444 !default;
+$ss_form_field_border: 1px solid #e5e5e5 !default;
+$ss_form_field_font_family: -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, "Helvetica Neue", Helvetica, sans-serif !default;
+$ss_form_field_font_weight: normal !default;
+$ss_form_field_padding_x: 16 !default;
+$ss_form_field_padding_y: 9 !default;
+$ss_form_field_font_size: 14 !default;
+$ss_form_field_border_radius: $ss_form_field_font_size / 2 !default;
+$ss_form_field_icon: $ss_form_field_fg !default; // used for select dropdown icon
+$ss_form_field_background_position: 98% 50% !default;
+$ss_form_field_background_size: 1.5em !default;
+$ss_form_field_label: #444 !default;
+$ss_form_field_label_font_size: 16 !default;
+$ss_form_field_label_font_weight: bold !default;
+$ss_form_field_label_hidden: false !default;
+$ss_form_field_icon: $ss_form_field_label !default;
+$ss_form_field_icon_size: 32 !default;
+$ss_form_field_placeholder: #999 !default;
+$ss_form_field_placeholder_style: italic !default;
+$ss_form_field_placeholder_weight: normal !default;
 
 // links
 $theme_link_fg: $unbranded_dark !default;
